--- a/src/film-component/card.css
+++ b/src/film-component/card.css
@@ -7,12 +7,12 @@
   display: grid;
   background-color: grey;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   height: 600px;
   width: 251px;
 }
-.card img {
+/* .card img {
   object-fit: cover;
   width: 100%;
   max-height: 100%;
-}
+} */
